--- a/prueba.html
+++ b/prueba.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <h2>Hola soy un titulo</h2>
+        <form action="bartolo" method="post">
+            <input type="text" name="name">Nombre
+            <input type="text" name="apellido">apellido
+            <button>Ingresar</button>
+        </form>
     </header>
 </body>
 </html>
