--- a/TPN1 Optativo/index.html
+++ b/TPN1 Optativo/index.html
@@ -8,39 +8,43 @@
     <link rel="stylesheet" href="/TPN1 Optativo/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Seguro No Pagamos Cooperativa</h1>
-    </header>
-    <div>
-        <form name="formulario">
-            <div>
-                <label>Nombre</label>
-                <input type="text" name="nombre" id="nombreId">
-            </div>
-            <div>
-                <label>Apellido</label>
-                <input type="text" name="apellido" id="apellidoId">
-            </div>
-            <div>
-                <label>Email</label>
-                <input type="email" name="mail" id="mailId">
-            </div>
-            <div>
-                <label>Telefono</label>
-                <input type="number" name="telefono" id="telefonoId">
-            </div>
-            <div>
-                <label>Tipo de seguro</label> 
-                <select name="tipoSeguro" id="tipoSeguro">
-                    <option value="1">Básico</option>
-                    <option value="2">Intermedio</option>
-                    <option value="3">Premium</option>
-                </select>
-            </div>
-            <div>
-                <button type="submit">Enviar</button>
-            </div>
-        </form>
+    <div id="cuerpo">
+        <header id="titulo">
+            <h1>Seguro No Pagamos Cooperativa</h1>
+        </header>
+        <div>
+            <form name="formulario">
+                <div>
+                    <label>Nombre</label>
+                    <input type="text" name="nombre" id="nombreId">
+                </div>
+                <div>
+                    <label>Apellido</label>
+                    <input type="text" name="apellido" id="apellidoId">
+                </div>
+                <div>
+                    <label>Email</label>
+                    <input type="email" name="mail" id="mailId">
+                </div>
+                <div>
+                    <label>Telefono</label>
+                    <input type="number" name="telefono" id="telefonoId">
+                </div>
+                <div>
+                    <label>Tipo de seguro</label> 
+                    <select name="tipoSeguro" id="tipoSeguro" onchange="mostrarValorSeguro()">
+                        <option value="1">Básico</option>
+                        <option value="2">Intermedio</option>
+                        <option value="3">Premium</option>
+                    </select>
+                    <span id="precioSeguro"></span>
+                </div>
+                <div>
+                    <button type="submit">Enviar</button>
+                </div>
+            </form>
+        </div>
     </div>
+    <script src="/TPN1 Optativo/js/funcion.js"></script>
 </body>
 </html>
