--- a/TPN1 Optativo/index.html
+++ b/TPN1 Optativo/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/TPN1 Optativo/css/style.css">
 </head>
 <body>
-    <div id="contenedor">
+    <div class="contenedor">
         <header class="titulo">
             <h1>Seguro No Pagamos Cooperativa</h1>
         </header>
